--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- MAIN CSS -->
+    <link rel="stylesheet" href="/css/main.css">
+
+    <!-- MEDIA QUERIES -->
+    <link rel="stylesheet" href="/css/media-queries.css">
+
     <title>Calculator | 4º Ioasys Camp</title>
 </head>
 <body>
@@ -50,6 +57,8 @@
         </div>
 
     </div>
+
+    <script src="/js/main.js"></script>
     
 </body>
 </html>
