The HTML and CSS is done

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- FONT AWESOME -->
+    <link rel="stylesheet" type="text/css" href="/fontawesome-free-5.15.4-web/css/all.css">
+
     <!-- MAIN CSS -->
     <link rel="stylesheet" type="text/css" href="/css/main.css">
 
@@ -57,6 +60,24 @@
         </div>
 
     </div>
+
+    <footer class="footer">
+
+        <div class="social-medias">
+
+            <a class="github-icon" href="https://www.github.com/ViniciusAlba" target="_blank">
+                <i class="fab fa-2x fa-github"></i>
+            </a>
+
+            <a class="linkedin-icon" href="https://www.linkedin.com/in/viniciussmartins/" target="_blank">
+                <i class="fab fa-2x fa-linkedin"></i>
+            </a>
+
+        </div>
+
+        <p>Created by Vinicius Martins</p>
+
+    </footer>
 
     <script src="/js/main.js"></script>
     
