Added clear and backspace

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
 
         <div class="buttons-area">
 
+            <button id="clear" class="button">CLEAR</button>
+            <button id="backspace" class="button"><<</button>
+            <button id="add" class="button">+</button>
+
+        </div>
+
+        <div class="buttons-area">
+
             <button id="seven" class="button">7</button>
             <button id="eight" class="button">8</button>
             <button id="nine" class="button">9</button>
@@ -54,7 +62,6 @@
 
             <button id="zero" class="button">0</button>
             <button id="dot" class="button">.</button>
-            <button id="add" class="button">+</button>
             <button id="equal" class="button">=</button>
 
         </div>
