The calculator is done

--- a/index.html
+++ b/index.html
@@ -22,47 +22,34 @@
 
         <div class="display-area">
 
-            <input id="display" class="display" type="number" name="number">
+            <input class="display" type="text" value="0" disabled>
 
         </div>
 
         <div class="buttons-area">
 
-            <button id="clear" class="button">CLEAR</button>
-            <button id="backspace" class="button"><<</button>
-            <button id="add" class="button">+</button>
+            <button id="clear" class="button all-clear" value="all-clear">CLEAR</button>
+            <button class="button backspace" value="backspace"><<</button>
+            <button class="button operator" value="+">+</button>
 
-        </div>
+            <button class="button" value="7">7</button>
+            <button class="button" value="8">8</button>
+            <button class="button" value="9">9</button>
+            <button class="button operator" value="/">/</button>
 
-        <div class="buttons-area">
+            <button class="button" value="4">4</button>
+            <button class="button" value="5">5</button>
+            <button class="button" value="6">6</button>
+            <button class="button operator" value="*">*</button>
 
-            <button id="seven" class="button">7</button>
-            <button id="eight" class="button">8</button>
-            <button id="nine" class="button">9</button>
-            <button id="division" class="button">/</button>
+            <button class="button" value="1">1</button>
+            <button class="button" value="2">2</button>
+            <button class="button" value="3">3</button>
+            <button class="button operator" value="-">-</button>
 
-        </div>
-        <div class="buttons-area">
-
-            <button id="four" class="button">4</button>
-            <button id="five" class="button">5</button>
-            <button id="six" class="button">6</button>
-            <button id="multiply" class="button">*</button>
-
-        </div>
-        <div class="buttons-area">
-
-            <button id="one" class="button">1</button>
-            <button id="two" class="button">2</button>
-            <button id="three" class="button">3</button>
-            <button id="subtract" class="button">-</button>
-
-        </div>
-        <div class="buttons-area">
-
-            <button id="zero" class="button">0</button>
-            <button id="dot" class="button">.</button>
-            <button id="equal" class="button">=</button>
+            <button class="button" value="0">0</button>
+            <button class="button decimal" value=".">.</button>
+            <button class="button equal operator" value="=">=</button>
 
         </div>
 
